fixing spacing and other

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  background-color: #dbd6d0
+  background-color: #dbd6d0;
 }
 
 *, *::before, *::after {
@@ -21,11 +21,12 @@ header {
 h1 {
   color: #fff;
   text-align: center;
-  font-family: 'Bevan', cursive;
+  font-family: "Bevan", cursive;
 }
 
 nav li {
   display: inline-block;
+  text-decoration: none;
   margin:0.3em;
   max-width: 20em;
   padding: 0.75em;
@@ -34,6 +35,5 @@ nav li {
   text-align: center;
   color: #fff;
   list-style-type: none;
-  text-decoration: none;
   font-family: sans-serif;
 }
